--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html>
+<head>
+	<title>kunalprompt</title>
+</head>
+<body style="text-align:center;">
+	<span style="color: #1e90ff;font-weight:bold;">
+	Hello World
+	</span>
+</body>
+</html>
