--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 	<title>kunalprompt</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body style="text-align:center;">
-	<span style="color: #1e90ff;font-weight:bold;">
+<body style="">
+	<p style="">
 	Hello World
-	</span>
+	</p>
 </body>
 </html>
