--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>kunalprompt</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="static/css/index.css">
 </head>
 <body style="">
 	<p style="">
