--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<title>kunalprompt</title>
 	<link rel="stylesheet" type="text/css" href="static/css/index.css">
+	<link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap-theme.min.css">
 </head>
-<body style="">
-	<p style="">
-	Hello World
-	</p>
+<body>
+	<div class="container">
+		Kunal Sharma
+	</div>
+<script type="text/javascript" src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
