my new presence on web

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2>About Me</h2>
                 <p style="font-size:1.3em;"> I'm a Data Science enthusiast who daily want to work with Data using my favorite language Python. I worked on data sourcing(Python, Scrapy, APIs, Social Data), data preperation and storing it into NoSQL databases(Redis, MongoDb) and SQL databases(MySQL, SQLite), developed REST APIs(Django, Flask) to allow data to be used by others, worked on Front-End Web development using latest front-end tools and technologies(Yeoman, Grunt, Bower, Backbone, jQuery etc.) and hosted all on Cloud Servers(AWS, Digital Ocean, Google App Engine, Heroku, Nginx).
                <br><br>
-               I passed out from Himachal Pradesh University Institute of Information Technlogy Shimla in the year 2014. I scored 80% (approx.) in my BTech(I.T.) annd approximately 90% in my 10+2 class with Maths and Physics as majors.</p>
+               I passed out from Himachal Pradesh University Institute of Information Technlogy Shimla in the year 2014. I scored 80% (approx.) in my BTech(I.T.) and approximately 90% in my 10+2 class with Maths and Physics as majors.</p>
             </div>
         </div>
     </section>
