--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             var marker = new google.maps.Marker({
                 position: myLatlng,
                 map: map,
-                title: 'Hello World!'
+                title: 'Hello World! Kunal here.'
             });
         }
         google.maps.event.addDomListener(window, 'load', initialize);
