index.html location update

--- a/index.html
+++ b/index.html
@@ -50,16 +50,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About Me</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#download">My Experiences</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact Me</a>
                     </li>
@@ -92,25 +88,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p style="font-size:1.3em;"> I'm a Data Science enthusiast who daily want to work with Data using my favorite language Python. I worked on data sourcing(Python, Scrapy, APIs, Social Data), data preperation and storing it into NoSQL databases(Redis, MongoDb) and SQL databases(MySQL, SQLite), developed REST APIs(Django, Flask) to allow data to be used by others, worked on Front-End Web development using latest front-end tools and technologies(Yeoman, Grunt, Bower, Backbone, jQuery etc.) and hosted all on Cloud Servers(AWS, Digital Ocean, Google App Engine, Heroku, Nginx).
-               <br><br>
+                <p style="font-size:1.3em;"> I'm a Data Science enthusiast who daily work with Data using one of the great programming language Python. I worked on data sourcing(Python, Scrapy, APIs, Social Data), data preperation and storing it into NoSQL databases(Redis, MongoDb) and SQL databases(MySQL, SQLite), developed REST APIs(Django, Flask) to allow data to be used by others, worked on Front-End Web development using latest front-end tools and technologies(Yeoman, Grunt, Bower, Backbone, jQuery etc.) and hosted all on Cloud Servers(AWS, Digital Ocean, Google App Engine, Heroku, Nginx).
+               <br>
                I passed out from Himachal Pradesh University Institute of Information Technlogy Shimla in the year 2014. I scored 80% (approx.) in my BTech(I.T.) and approximately 90% in my 10+2 class with Maths and Physics as majors.</p>
             </div>
         </div>
     </section>
-
-    <!-- Download Section -->
-    <!-- <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>My Experiences</h2>
-                    <p> </p>
-                    <a href="" class="btn btn-default btn-lg">Visit</a>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
@@ -161,7 +144,7 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script>
         function initialize() {
-            var myLatlng = new google.maps.LatLng(30.732324, 76.803718);
+            var myLatlng = new google.maps.LatLng(12.995733, 77.620445);
             var mapOptions = {
                 zoom: 14,
                 center: myLatlng
